--- a/css/main.css
+++ b/css/main.css
@@ -1,4 +1,5 @@
-/*! normalize.css v1.1.3 | MIT License | git.io/normalize */article,aside,details,figcaption,figure,footer,header,hgroup,main,nav,section,summary{display:block}audio,canvas,video{display:inline-block;*display:inline;*zoom:1}audio:not([controls]){display:none;height:0}[hidden]{display:none}html{font-size:100%;-ms-text-size-adjust:100%;-webkit-text-size-adjust:100%}html,button,input,select,textarea{font-family:sans-serif}body{margin:0}a:focus{outline:thin dotted}a:active,a:hover{outline:0}h1{font-size:2em;margin:.67em 0}h2{font-size:1.5em;margin:.83em 0}h3{font-size:1.17em;margin:1em 0}h4{font-size:1em;margin:1.33em 0}h5{font-size:.83em;margin:1.67em 0}h6{font-size:.67em;margin:2.33em 0}abbr[title]{border-bottom:1px dotted}b,strong{font-weight:bold}blockquote{margin:1em 40px}dfn{font-style:italic}hr{-moz-box-sizing:content-box;box-sizing:content-box;height:0}mark{background:#ff0;color:#000}p,pre{margin:1em 0}code,kbd,pre,samp{font-family:monospace,serif;_font-family:'courier new',monospace;font-size:1em}pre{white-space:pre;white-space:pre-wrap;word-wrap:break-word}q{quotes:none}q:before,q:after{content:'';content:none}small{font-size:80%}sub,sup{font-size:75%;line-height:0;position:relative;vertical-align:baseline}sup{top:-0.5em}sub{bottom:-0.25em}dl,menu,ol,ul{margin:1em 0}dd{margin:0 0 0 40px}menu,ol,ul{padding:0 0 0 40px}nav ul,nav ol{list-style:none;list-style-image:none}img{border:0;-ms-interpolation-mode:bicubic}svg:not(:root){overflow:hidden}figure{margin:0}form{margin:0}fieldset{border:1px solid silver;margin:0 2px;padding:.35em .625em .75em}legend{border:0;padding:0;white-space:normal;*margin-left:-7px}button,input,select,textarea{font-size:100%;margin:0;vertical-align:baseline;*vertical-align:middle}button,input{line-height:normal}button,select{text-transform:none}button,html input[type="button"],input[type="reset"],input[type="submit"]{-webkit-appearance:button;cursor:pointer;*overflow:visible}button[disabled],html input[disabled]{cursor:default}input[type="checkbox"],input[type="radio"]{box-sizing:border-box;padding:0;*height:13px;*width:13px}input[type="search"]{-webkit-appearance:textfield;-moz-box-sizing:content-box;-webkit-box-sizing:content-box;box-sizing:content-box}input[type="search"]::-webkit-search-cancel-button,input[type="search"]::-webkit-search-decoration{-webkit-appearance:none}button::-moz-focus-inner,input::-moz-focus-inner{border:0;padding:0}textarea{overflow:auto;vertical-align:top}table{border-collapse:collapse;border-spacing:0}
+/*! normalize.css v3.0.0 | MIT License | git.io/normalize */html{font-family:sans-serif;-ms-text-size-adjust:100%;-webkit-text-size-adjust:100%}body{margin:0}article,aside,details,figcaption,figure,footer,header,hgroup,main,nav,section,summary{display:block}audio,canvas,progress,video{display:inline-block;vertical-align:baseline}audio:not([controls]){display:none;height:0}[hidden],template{display:none}a{background:transparent}a:active,a:hover{outline:0}abbr[title]{border-bottom:1px dotted}b,strong{font-weight:bold}dfn{font-style:italic}h1{font-size:2em;margin:.67em 0}mark{background:#ff0;color:#000}small{font-size:80%}sub,sup{font-size:75%;line-height:0;position:relative;vertical-align:baseline}sup{top:-0.5em}sub{bottom:-0.25em}img{border:0}svg:not(:root){overflow:hidden}figure{margin:1em 40px}hr{-moz-box-sizing:content-box;box-sizing:content-box;height:0}pre{overflow:auto}code,kbd,pre,samp{font-family:monospace,monospace;font-size:1em}button,input,optgroup,select,textarea{color:inherit;font:inherit;margin:0}button{overflow:visible}button,select{text-transform:none}button,html input[type="button"],input[type="reset"],input[type="submit"]{-webkit-appearance:button;cursor:pointer}button[disabled],html input[disabled]{cursor:default}button::-moz-focus-inner,input::-moz-focus-inner{border:0;padding:0}input{line-height:normal}input[type="checkbox"],input[type="radio"]{box-sizing:border-box;padding:0}input[type="number"]::-webkit-inner-spin-button,input[type="number"]::-webkit-outer-spin-button{height:auto}input[type="search"]{-webkit-appearance:textfield;-moz-box-sizing:content-box;-webkit-box-sizing:content-box;box-sizing:content-box}input[type="search"]::-webkit-search-cancel-button,input[type="search"]::-webkit-search-decoration{-webkit-appearance:none}fieldset{border:1px solid silver;margin:0 2px;padding:.35em .625em .75em}legend{border:0;padding:0}textarea{overflow:auto}optgroup{font-weight:bold}table{border-collapse:collapse;border-spacing:0}td,th{padding:0}
+/*! HTML5 Boilerplate v4.3.0 | MIT License | http://h5bp.com/ */html{color:#222;font-size:1em;line-height:1.4}::-moz-selection{background:#b3d4fc;text-shadow:none}::selection{background:#b3d4fc;text-shadow:none}hr{display:block;height:1px;border:0;border-top:1px solid #ccc;margin:1em 0;padding:0}audio,canvas,img,svg,video{vertical-align:middle}fieldset{border:0;margin:0;padding:0}textarea{resize:vertical}.browsehappy{margin:.2em 0;background:#ccc;color:#000;padding:.2em 0}.hidden{display:none !important;visibility:hidden}.visuallyhidden{border:0;clip:rect(0 0 0 0);height:1px;margin:-1px;overflow:hidden;padding:0;position:absolute;width:1px}.visuallyhidden.focusable:active,.visuallyhidden.focusable:focus{clip:auto;height:auto;margin:0;overflow:visible;position:static;width:auto}.invisible{visibility:hidden}.clearfix:before,.clearfix:after{content:" ";display:table}.clearfix:after{clear:both}@media print{*{background:transparent !important;color:#000 !important;box-shadow:none !important;text-shadow:none !important}a,a:visited{text-decoration:underline}a[href]:after{content:" (" attr(href) ")"}abbr[title]:after{content:" (" attr(title) ")"}a[href^="javascript:"]:after,a[href^="#"]:after{content:""}pre,blockquote{border:1px solid #999;page-break-inside:avoid}thead{display:table-header-group}tr,img{page-break-inside:avoid}img{max-width:100% !important}p,h2,h3{orphans:3;widows:3}h2,h3{page-break-after:avoid}}
 /**************************
  *          Fonts         *
  **************************
@@ -70,13 +71,68 @@ a {
   text-decoration: none; 
 }
 
-/*http://subtlepatterns.subtlepatterns.netdna-cdn.com/patterns/arches.png*/
-
 /****************************
  *          layout          *
  ****************************
  * grids definition
  */
+
+/**
+ * Base de bloques
+ * width = 1020
+ * col = 160
+ * gutter (left - right) = 5 => 10
+ * ---------------------------------------
+ * 1 = 160 = 15.686% = calc(160*100/1020)
+ * 2 = 330 = 32.352% = calc(330*100/1020)
+ * 3 = 500 = 49.019% = calc(500*100/1020)
+ * =======================================
+ * height = 640
+ * row = 118
+ * gutter (top - bottom) =  5 => 10 
+ * ---------------------------------------
+ * 1 = 118
+ * 2 = 246
+ * 3 = 374
+ * 4 = 502
+ */
+.grid {
+  position: relative;
+  width: 1020px;
+}
+.grid:after {
+  display: table;
+  clear: both;
+  zoom: 1;
+}
+.grid>.e { 
+  margin: 5px 0.490%; 
+  margin: 5px -webkit-calc(5 / 1020 * 100%);
+  margin: 5px -moz-calc(5 / 1020 * 100%);
+  margin: 5px calc(5 / 1020 * 100%);
+}
+.w1 {
+  width: 15.686%;
+  width: -webkit-calc(160 / 1020 * 100%);
+  width: -moz-calc(160 / 1020 * 100%);
+  width: calc(160 / 1020 * 100%);
+}
+.w2 {
+  width: 32.352%;
+  width: -webkit-calc(330 / 1020 * 100%);
+  width: -moz-calc(330 / 1020 * 100%);
+  width: calc(330 / 1020 * 100%);
+}
+.w3 {
+  width: 49.019%;
+  width: -webkit-calc(500 / 1020 * 100%);
+  width: -moz-calc(500 / 1020 * 100%);
+  width: calc(500 / 1020 * 100%);
+}
+.h1 { height: 118px; }
+.h2 { height: 246px; }
+.h3 { height: 374px; }
+.h4 { height: 502px; }
 
 /****************************
  *          Module          *
@@ -102,7 +158,57 @@ a {
   z-index: 20;
 }
 .nav>li { margin: 0 0 0 2px; }
+.nav--social-networks {
+  bottom: 30px;
+  right: 30px;
+  font-size: 10px;
+}
+.nav--social-networks>li>a {
+  display: block;
+  position: relative;
+  width: 40px;
+  background-color: #111;
+  font-size: 4em;
+  color: #fff;
+  text-align: center;
+  -webkit-border-radius: 50%;
+  -moz-border-radius: 50%;
+  -ms-border-radius: 50%;
+  -o-border-radius: 50%;
+  border-radius: 50%;
+  -webkit-transition: all .3s ease;
+  -moz-transition: all .3s ease;
+  -o-transition: all .3s ease;
+  -ms-transition: all .3s ease;
+  transition: all .3s ease;
+}
+.nav--social-networks .icon-social--facebook:hover { background-color: #3b5998; }
+.nav--social-networks .icon-social--twitter:hover { background: #3a92c8; }
+.nav--social-networks .icon-social--google-plus:hover { background-color: #dd4b39; }
+.nav--social-networks .icon--youtube:hover { background-color: #cc181e; }
+.nav--user {
+  top: 30px; 
+  right: 15px; 
+  font-size: 10px;
+}
+.nav--user>li:first-child { margin-right: 5px; }
+.nav--user>li:first-child>a {
+  font-family: monospace; 
+  color: #333; 
+  font-size: 1.3em; 
+  word-spacing: -5px;
+}
+.nav--user>li:first-child .icon {
+  font-size: 3em; 
+  vertical-align: middle;
+} 
+.nav--user>li>a {
+  color: #555;
+  font-size: 5em;
+}
 /* icons */
+.icon,
+.icon-social { line-height: 1; }
 .icon { font-family: 'entypo'; }
 .icon-social { font-family: 'entypo-social'; }
 /* header */
@@ -124,22 +230,15 @@ a {
   background-image: radial-gradient(circle, transparent, #000);
 }
 .header__nav {
-  position: absolute;
-  min-width: 1020px;
+  min-width: 980px;
   width: 70%;
-  top: 100px;
-  left: 50%;
+  margin: 100px auto 0 auto;
   z-index: 200;
-  -webkit-transform: translateX(-50%);
-  -moz-transform: translateX(-50%);
-  -ms-transform: translateX(-50%);
-  -o-transform: translateX(-50%);
-  transform: translateX(-50%);
 }
 .header__nav__logo { float: left; }
 .header__nav__navbar {
   float: right;
-  width: 840px; 
+  width: 800px; 
   margin: 25px 0;
   font-family: 'Oswald', sans-serif;
   text-transform: uppercase; 
@@ -147,7 +246,10 @@ a {
 }
 .header__nav__navbar>li {
   position: relative;
-  width: 14.2857142857%;
+  width: 14.286%;
+  width: -webkit-calc(100% / 7);
+  width: -moz-calc(100% / 7);
+  width: calc(100% / 7);
   text-align: center;
 }
 .header__nav__navbar>li>a {
@@ -174,7 +276,6 @@ a {
   -ms-transform: translateX(-50%);
   -o-transform: translateX(-50%);
   transform: translateX(-50%);
-  /*margin-left: -7px; hack to ie*/
   border-left: 6px solid transparent;
   border-right: 6px solid transparent;
   border-bottom: 6px solid #FFF;
@@ -201,26 +302,28 @@ a {
   -o-transition: all .7s ease;
   transition: all .7s ease;
 }
-.header__slide {
-  position: absolute; 
-  bottom: 0; 
-  left: 0;
-}
-.header__slide>img { width: 100%; }
+.header__slide { margin-top: 90px; }
+.header__slide>img { width: 100%; display: none; }
+.header__slide>.cycle-sentinel { display: block; }
 /* main navbar */
 .sidebar {
   position: fixed;
   width: 100px;
   height: 100%;
   top: 0;
-  left: -100px;
+  -webkit-transform: translateX(-100%);
+  -moz-transform: translateX(-100%);
+  -ms-transform: translateX(-100%);
+  -o-transform: translateX(-100%);
+  transform: translateX(-100%);
   z-index: 20;
-  overflow: hidden;  
-  -webkit-transition: left .3s ease-in; 
-  -moz-transition: left .3s ease-in; 
-  -ms-transition: left .3s ease-in; 
-  -o-transition: left .3s ease-in; 
-  transition: left .3s ease-in;
+  overflow: hidden; 
+  /* only transition to transform */ 
+  -webkit-transition: -webkit-transform .25s ease; 
+  -moz-transition: -moz-transform .25s ease; 
+  -ms-transition: -ms-transform .25s ease; 
+  -o-transition: -o-transform .25s ease; 
+  transition: transform .25s ease;
 }
 .sidebar__nav {
   width: 100px;
@@ -285,11 +388,104 @@ a {
   -o-transition: all .7s ease;
   transition: all .7s ease;
 }
-/* main */
-.main {}
+/* articles */
+.articles {
+  position: fixed;
+  width: 100%;   
+  padding-top: 50px;
+  background-image: url(//subtlepatterns.subtlepatterns.netdna-cdn.com/patterns/arches.png);
+}
+.articles__container {
+  width: 1020px;
+  margin: 0 auto;
+}
+.articles article {
+  clear: both;
+  margin: 0;
+  padding: 0;
+}
+.articles article>header {
+  font: 2.15em 'Fjalla One', sans-serif;
+  text-transform: uppercase; 
+}
+.articles article>menu {
+  margin-top: 15px; 
+  font-family: 'Oswald', sans-serif; 
+  font-size: .875em; 
+  text-transform: uppercase; 
+  text-align: center;
+}
+.articles article>menu>li>a {
+  display: block; 
+  padding: 10px 0;
+  color: #444; 
+  -webkit-transition: background-color .7s ease, color .35s ease;
+  -moz-transition: background-color .7s ease, color .35s ease;
+  -ms-transition: background-color .7s ease, color .35s ease;
+  -o-transition: background-color .7s ease, color .35s ease;
+  transition: background-color .7s ease, color .35s ease;
+}
+.articles article>menu>li>a:hover { color: #fff; }
+/* article design */
+.articles .design>menu { border-top: thin solid #ff2157; }
+.articles .design>menu>li {
+  width: 14.286%; 
+  width: -webkit-calc(100% / 7); 
+  width: -moz-calc(100% / 7); 
+  width: calc(100% / 7);
+}
+/* article architecture */
+.articles .architecture>menu { border-top: thin solid #ff8932; }
+.articles .architecture>menu>li {
+  width: 25%;
+  width: -webkit-calc(100% / 4); 
+  width: -moz-calc(100% / 4); 
+  width: calc(100% / 4);
+}
+/* article paint */
+.articles .paint>menu { border-top: thin solid #82bc46; }
+.articles .paint>menu>li {
+  width: 14.286%; 
+  width: -webkit-calc(100% / 7); 
+  width: -moz-calc(100% / 7); 
+  width: calc(100% / 7);
+}
+/* article photography */
+.articles .photography>menu { border-top: thin solid #06838f; }
+.articles .photography>menu>li {
+  width: 25%;
+  width: -webkit-calc(100% / 4); 
+  width: -moz-calc(100% / 4); 
+  width: calc(100% / 4);
+}
+/* article mixed */
+.articles .mixed>menu { border-top: thin solid #00b8ff; }
+.articles .mixed>menu>li {
+  width: 33.333%;
+  width: -webkit-calc(100% / 3); 
+  width: -moz-calc(100% / 3); 
+  width: calc(100% / 3);
+}
+/* article sculpture */
+.articles .sculpture>menu { border-top: thin solid #9365e6; }
+.articles .sculpture>menu>li {
+  width: 25%;
+  width: -webkit-calc(100% / 4); 
+  width: -moz-calc(100% / 4); 
+  width: calc(100% / 4);
+}
+/* article dynamics */
+.articles .dynamics>menu { border-top: thin solid #d21600; }
+.articles .dynamics>menu>li {
+  width: 33.333%;
+  width: -webkit-calc(100% / 3); 
+  width: -moz-calc(100% / 3); 
+  width: calc(100% / 3);
+}
 /* footer */
 .footer {
-  height: 200%;
+  min-height: 200%;
+  background: #111 url(../img/borde_contact.png) repeat-x 0 -1px;
 }
 
 /***************************
@@ -298,14 +494,24 @@ a {
  * contains different states of elements. Definition of rules if particular object is hidden, pressed, expanded etc ...
  */
 
-/* header navbar */
+/* header */
+.header--inactive { position: static; }
 .header__nav__navbar .dropdown>.dropdown-menu>.list>li>a:hover { color: #fff; }
-
 /* main navbar or sidebar */
-.sidebar--active { left: 0; }
+.sidebar--active {
+  -webkit-transform: translateX(0%);
+  -moz-transform: translateX(0%);
+  -ms-transform: translateX(0%);
+  -o-transform: translateX(0%);
+  transform: translateX(0%);
+}
 .sidebar--active:hover { width: 340px; }
 .sidebar__nav__sidenav .dropdown:hover>.dropdown-menu { display: block; }
 .sidebar__nav__sidenav .dropdown>.dropdown-menu>.list>li>a:hover { background-color: #fff; }
+/* articles */
+.articles--active { position: static; }
+/* footer */
+.footer--active { min-height: 100%; }
 
 /***************************
  *          Theme          *
@@ -318,43 +524,36 @@ a {
 .bgc-hover-design:hover { background-color: #ff2157 !important; }
 .c-design,
 .c-hover-design:hover { color: #ff2157 !important; }
-
 /* theme architecture*/
 .bgc-architecture, 
 .bgc-hover-architecture:hover { background-color: #ff8932 !important; }
 .c-architecture, 
 .c-hover-architecture:hover { color: #ff8932 !important; }
-
 /* theme paint */
 .bgc-paint, 
 .bgc-hover-paint:hover { background-color: #82bc46 !important; }
-.c--paint, 
+.c-paint, 
 .c-hover-paint:hover { color: #82bc46 !important; }
-
 /* theme photography */
 .bgc-photography, 
 .bgc-hover-photography:hover { background-color: #06838f !important; }
 .c-photography, 
 .c-hover-photography:hover { color: #06838f !important; }
-
 /* theme mixed */
 .bgc-mixed, 
 .bgc-hover-mixed:hover { background-color: #00b8ff !important; }
 .c-mixed, 
 .c-hover-mixed:hover { color: #00b8ff !important; }
-
 /* theme sculpture */
 .bgc-sculpture, 
 .bgc-hover-sculpture:hover { background-color: #9365e6 !important; }
 .c-sculpture, 
 .c-hover-sculpture:hover { color: #9365e6 !important; }
-
 /* theme dynamics */
 .bgc-dynamics, 
 .bgc-hover-dynamics:hover { background-color: #d21600 !important; }
 .c-dynamics, 
 .c-hover-dynamics:hover { color: #d21600 !important; } 
-
- /* theme for scrollbar */
+/* theme for scrollbar */
 ::-webkit-scrollbar { width: 6px; }
 ::-webkit-scrollbar-thumb { background-color: rgba(0,0,0,.45); }
